--- a/Google Guide.ipynb
+++ b/Google Guide.ipynb
@@ -31,9 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H', 'i', 'M', 'a', 'r', 'k']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greeting = list('HiMark') #string to list\n",
     "greeting"
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H', 'i', 'M', 'a', 'r', 'k', '!', '<', '3']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greeting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,18 +99,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H',\n",
+       " 'i',\n",
+       " 'M',\n",
+       " 'a',\n",
+       " 'r',\n",
+       " 'k',\n",
+       " '!',\n",
+       " '<',\n",
+       " '3',\n",
+       " 'H',\n",
+       " 'i',\n",
+       " 'M',\n",
+       " 'a',\n",
+       " 'r',\n",
+       " 'k',\n",
+       " '!',\n",
+       " '<',\n",
+       " '3']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greeting * 2 # the list twice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HiMark!<3HiMark!<3'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greet_string * 2 #the string twice"
    ]
@@ -104,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[72, 105, 77, 97, 114, 107, 33, 60, 51]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greet_ascii = [ord(c) for c in greet_string]\n",
     "greet_ascii"
@@ -114,18 +186,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HiMark!<3'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "''.join(chr(i) for i in greet_ascii) # you can do a little list comprehension inside a method call without the []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[33, 51, 60, 72, 77, 97, 105, 107, 114]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sorted_ascii = sorted(greet_ascii)\n",
     "sorted_ascii"
@@ -141,9 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['r', 'M', 'k', 'i', 'H', 'a', '<', '3', '!']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "greeting.sort(key = lambda char: char.upper()) \n",
     "greeting = greeting[::-1] # REVERSE the list\n",
@@ -186,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Kanye': 1, 'J Cole': 2, 'Nicki Minaj': 15}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rappers['Kanye'] = 1\n",
     "rappers['J Cole'] = 2\n",
@@ -207,18 +323,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(rappers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
     "for ranking in rappers.values(): #also: rappers.keys()\n",
     "    print(ranking)"
@@ -226,9 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number  1  rapper is  Kanye\n",
+      "the number  2  rapper is  J Cole\n",
+      "the number  15  rapper is  Nicki Minaj\n"
+     ]
+    }
+   ],
    "source": [
     "for rapper, ranking in rappers.items():\n",
     "    print('the number ', ranking, ' rapper is ', rapper)"
@@ -260,9 +407,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jazmyn', 'Maxwell', 'Stelios'}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "your_friends = set()\n",
     "your_friends.add(\"Maxwell\")\n",
@@ -273,9 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Jazmyn', 'Maxwell', 'Stelios'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "your_friends.add(\"Maxwell\")\n",
     "your_friends"
@@ -311,9 +480,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "12\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "class Node:\n",
     "\n",
@@ -383,7 +563,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -394,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,9 +590,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'v1': ['v2', 'v4', 'v3'],\n",
+       " 'v2': ['v4', 'v5'],\n",
+       " 'v3': ['v6'],\n",
+       " 'v4': ['v3', 'v6', 'v7'],\n",
+       " 'v5': ['v4', 'v7'],\n",
+       " 'v6': [],\n",
+       " 'v7': ['v6']}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "graph"
    ]
@@ -427,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,9 +642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['v1', 'v2', 'v4', 'v3', 'v6']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_path(graph, 'v1', 'v6') #clearly not the best path, just A path"
    ]
@@ -462,9 +669,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following is Breadth First Traversal (starting from vertex 2)\n",
+      "2 0 3 1 "
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Python3 Program to print BFS traversal \n",
@@ -544,9 +760,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Following is DFS from (starting from vertex 2)\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Python program to print DFS traversal from a \n",
